review entity and repo created