@@ -1,12 +1,9 @@
 package lt.monikos.meepley.service;
 
-import lt.monikos.meepley.entity.Game;
 import lt.monikos.meepley.repository.GameRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.util.List;
 
 @Service
 @Transactional
@@ -19,19 +16,41 @@ public class GameService {
         this.gameRepository = gameRepository;
     }
 
-    public List<Game> getByTitle(String gameTitle) {
-        return gameRepository.findAll()
-                .stream()
-                .filter(g -> g.getTitle().equalsIgnoreCase(gameTitle))
-                .toList();
-    }
+//    public List<Game> getByTitle(String gameTitle) {
+//        return gameRepository.findAll()
+//                .stream()
+//                .filter(g -> g.getTitle().matches("(?i)^" + Pattern.quote(gameTitle) + ".*"))
+//                .collect(Collectors.toList());
+//    }
+//
+//    public List<Game> getByCategory(String categories) {
+//        String[] categoriesList = categories.split("\\s*,\\s*");
+//        List<Game> foundGames = new ArrayList<>();
+//
+//        for (String category: categoriesList) {
+//            List<Game> found = gameRepository.findAll()
+//                    .stream()
+//                    .filter(g -> g.getCategory().equalsIgnoreCase(category))
+//                    .toList();
+//            foundGames.addAll(found);
+//        }
+//        return foundGames;
+//    }
+//
+//    public List<Game> getByComplexity(String complexity) {
+//        String[] categoriesList = complexity.split("\\s*,\\s*");
+//        List<Game> foundGames = new ArrayList<>();
+//
+//        for (String category: categoriesList) {
+//            List<Game> found = gameRepository.findAll()
+//                    .stream()
+//                    .filter(g -> g.getComplexity().equalsIgnoreCase(category))
+//                    .toList();
+//            foundGames.addAll(found);
+//        }
+//        return foundGames;
+//    }
 
-    public List<Game> getByCategory(String category) {
-        return gameRepository.findAll()
-                .stream()
-                .filter(g -> g.getCategory().equalsIgnoreCase(category))
-                .toList();
-    }
 
 
 }
